[package]
name = "othello"
version = "0.1.0"
authors = ["matthewblewett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "*"
ordered-float = "1"
rand = { version = "0.6.3", default-features = false, features=["std"] }
schemars = "0.6"



[dependencies.toybox-core]
version = "*"
path = "../core"